--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'City and town life -- Juvenile fiction'
 - !lcsh 'Boys -- Juvenile fiction'
+- GITenberg
 title: 'A Son of the City
 
   A Story of Boy Life'
